# Action-learning-p2p-version-control

./: .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS_SESSION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.e2e  Dockerfile.linux  Dockerfile.release  LICENSE  README.md  build_linux.sh  build_linux_docker.sh  build_linux_in_docker.sh  build_macos.sh  docker-compose.test.yml  pom.xml
.agents/roadmap/: ROADMAP.md
.agents/skills/industry-architecture/: SKILL.md
.agents/skills/industry-cicd/: SKILL.md
.agents/skills/industry-cpp-daemon/: SKILL.md
.agents/skills/industry-documentation/: SKILL.md
.agents/skills/industry-go-coordinator/: SKILL.md
.agents/skills/industry-java-frontend/: SKILL.md
.agents/skills/industry-performance/: SKILL.md
.agents/skills/industry-reliability/: SKILL.md
.agents/skills/industry-roadmap-maker/: SKILL.md
.agents/skills/industry-security/: SKILL.md
.agents/skills/industry-testing/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-e2e.yml  integration.yml  release.yml  testing.yml
docs/adr/: 0000-adr-template.md  0001-tls-for-p2p.md  0002-config-management.md  0003-structured-logging.md  0004-native-watchers.md  0005-windows-port.md  0006-file-transfer-chunking.md  0007-delta-sync.md  0008-conflict-resolution-ui.md  001-tls-for-p2p.md  002-config-management.md  003-structured-logging.md  004-native-watchers.md  005-windows-port.md
docs/api/: ipc-protocol.yaml  p2p-protocol.md
docs/audit/: audit-report.md
docs/deploy/: deployment-guide.md  releasing.md
docs/guide/: developer-onboarding.md
docs/security/: security-model.md
docs/user/: user-manual.md
references/: reference.md
reports/architecture/: p2p_architecture.md  p2p_implementation_guide.md  quick_reference_task_assignment.md  repository-structure.md  system-architecture.txt
reports/bibliography/: bibliography.tex
reports/literature-review/: literature-review-outline.tex  literature-review.bib  literature-review.tex
reports/literature-review/literacture-review/sections/: 01_problem_context.tex  02_overview_of_the_existing_work.tex  03_comparison_of_approaches.tex  04_identified_gap.tex
reports/planning/: implementation-plan.txt
reports/project-proposal/: SE1 project proposal.odt
reports/thesis/: compile.sh  thesis-skeleton.tex  thesis.bib  thesis.tex
reports/thesis/chapters/: 01_introduction.tex  02_literature_review.tex  03_state_of_the_art.tex  04_system_architecture.tex  05_methodology.tex  06_results.tex  07_conclusions.tex  appendices.tex
scripts/: docker_harness.py  integration_harness.py  peer-entrypoint.py
src/: README.txt
src/backend/cpp/: CMakeLists.txt  README.md
src/backend/cpp/include/: file_transfer.h  filesystem_watcher.h  ipc_client.h  sha256.h
src/backend/cpp/src/: file_transfer.cpp  filesystem_watcher.cpp  fsevents_watcher.cpp  inotify_watcher.cpp  ipc_client.cpp  ipc_client_win.cpp  main.cpp  readdirectorychanges_watcher.cpp  sha256.cpp
src/backend/cpp/tests/: CMakeLists.txt  test_file_transfer.cpp  test_filesystem_watcher.cpp  test_ipc_client.cpp  test_sha256.cpp
src/backend/go/: go.mod  go.sum  main.go  main_test.go
src/backend/go/cmd/p2p-node/: main.go
src/backend/go/internal/sync/: README.txt
src/backend/go/pkg/config/: config.go  config_test.go
src/backend/go/pkg/discovery/: peer_discovery.go  peer_discovery_test.go
src/backend/go/pkg/ipc/: fuzz_test.go  ipc_server.go  ipc_server_test.go
src/backend/go/pkg/ipc/testdata/fuzz/FuzzReadMessage/: 2078540daf44d7f2
src/backend/go/pkg/log/: logger.go  logger_test.go
src/backend/go/pkg/metrics/: metrics.go  metrics_test.go
src/backend/go/pkg/network/: benchmark_test.go  connection_manager.go  connection_manager_test.go  tls.go
src/backend/go/pkg/protocol/: fuzz_test.go  messages.go  messages_test.go
src/backend/go/pkg/storage/sqlite/: db.go  db_test.go  history.go  metadata.go  repository.go
src/backend/go/pkg/sync/: benchmark_test.go  coordinator.go  daemon_unix.go  daemon_windows.go  integration_test.go  queue.go  queue_test.go  rapid_test.go  stress_test.go  sync_test.go  vector_persistence.go
src/backend/go/pkg/sync/testdata/rapid/TestQueueFIFOWithinRepo/: TestQueueFIFOWithinRepo-20260709153254-61685.fail
src/backend/go/pkg/transfer/: benchmark_test.go  file_transfer.go  transfer_test.go
src/backend/go/pkg/versioning/: conflict.go  conflict_test.go  lamport.go  lamport_test.go  rapid_test.go  vector_clock.go  versioning_test.go
src/frontend/java/: pom.xml
src/frontend/java/src/main/java/com/actionlearning/p2p/: App.java
src/frontend/main/java/: module-info.java
src/frontend/main/java/io/p2pvcs/app/: ConflictDialog.java  IpcBridge.java  Launcher.java  P2PApplication.java  RepoStatusController.java  RepositoryListController.java  SettingsDialog.java
src/frontend/main/java/org/codehaus/mojo/frontendtest/: ConflictDialog.java  HelloApplication.java  HelloController.java  IpcBridge.java  Launcher.java  RepoStatusController.java  RepositoryListController.java  SettingsDialog.java
src/frontend/main/resources/io/p2pvcs/app/: ConflictDialog.fxml  RepoStatusView.fxml  SettingsDialog.fxml  dark.css  repositoryList.fxml
src/frontend/main/resources/org/codehaus/mojo/frontendtest/: ConflictDialog.fxml  RepoStatusView.fxml  dark.css  hello-view.fxml  light.css  repositoryList.fxml  styles.css
src/frontend/test/java/io/p2pvcs/app/: ConflictDialogTest.java  IpcBridgeTest.java  RepoStatusControllerTest.java  RepositoryListControllerTest.java
src/frontend/test/java/org/codehaus/mojo/frontendtest/: ConflictDialogTest.java  HelloControllerTest.java  IpcBridgeTest.java  RepoStatusControllerTest.java  RepositoryListControllerTest.java
src/shared/protocol/: README.txt  sync-protocol.proto
